primitives: Use a custom shader for rendering Icon

This replaces all QIcon effects, masking and transition animation with a
custom shader that does the same, making use of the new ShaderNode to
avoid a lot of boilerplate.

BUG: 498530
BUG: 486724