src/primitives/icon.h
@@ -279,7 +279,6 @@ protected:
     QImage findIcon(const QSize &size);
     void handleFinished(QNetworkReply *reply);
     void handleRedirect(QNetworkReply *reply);
-    QIcon::Mode iconMode() const;
     bool guessMonochrome(const QImage &img);
     void setStatus(Status status);
     void updatePolish() override;
